--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>WebGL School Task</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div>
+      <h1>WebGL School Task</h1>
+      <a href="./task01/index.html">Task01</a>
+    </div>
   </body>
 </html>
