fix: deploy path

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <div>
       <h1>WebGL School Task</h1>
-      <a href="./task01/">Task01</a>
+      <a href="/webgl-shool-task/task01/">Task01</a>
     </div>
   </body>
 </html>
