--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./src/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebGL School Task</title>
     <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
@@ -11,7 +11,7 @@
   <body>
     <div>
       <h1>WebGL School Task</h1>
-      <a href="./task01/index.html">Task01</a>
+      <a href="./src/task01/">Task01</a>
     </div>
   </body>
 </html>
