fix: change vite config

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <body>
     <div>
       <h1>WebGL School Task</h1>
-      <a href="./src/task01/">Task01</a>
+      <a href="./task01/">Task01</a>
     </div>
   </body>
 </html>
