fix: gui import path

--- a/src/task01/index.html
+++ b/src/task01/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./style.css">
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://unpkg.com/three/build/three.module.js"
+        }
+      }
+    </script>
     <script src="./script.js" type="module"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebGL School Task</title>
