--- a/src/task01/index.html
+++ b/src/task01/index.html
@@ -7,6 +7,7 @@
       {
         "imports": {
           "three": "https://unpkg.com/three/build/three.module.js"
+          "OrbitControls": "https://unpkg.com/three/examples/jsm/controls/OrbitControls.js"
         }
       }
     </script>
