add: create practice01

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,17 @@
     <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
   </head>
   <body>
-    <div>
-      <h1>WebGL School Task</h1>
-      <a href="task01/index.html">Task01</a>
+    <div class="wrapper">
+      <h1>WebGL School</h1>
+      <h2>Task</h2>
+      <ul>
+        <li><a href="task01/index.html">Task01</a></li>
+        <li><a href="task02/index.html">Task02</a></li>
+      </ul>
+      <h2>Practice</h2>
+      <ul>
+        <li><a href="practice01/index.html">Practice01</a></li>
+      </ul>
     </div>
   </body>
 </html>
