--- a/src/task01/index.html
+++ b/src/task01/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" type="module"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebGL School Task</title>
+    <title>WebGL School Task01</title>
     <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
   </head>
   <body>
