--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="./style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebGL School Task</title>
-    <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap");
+    </style>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        font-family: Secular One, sans-serif;
+      }
+      html,
+      body {
+        overflow: hidden;
+        font-family: Secular One, sans-serif;
+      }
+      canvas {
+        position: absolute;
+        top: 0;
+        z-index: -1;
+      }
+      h1 {
+        margin: 10px;
+      }
+      h2 {
+        margin-left: 15px;
+      }
+      ul {
+        margin-left: 35px;
+      }
+      .wrapper {
+        margin: 10px;
+      }
+    </style>
   </head>
   <body>
     <div class="wrapper">
