practice add sphere

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
       <h2>Practice</h2>
       <ul>
         <li><a href="practice01/index.html">Practice01</a></li>
+        <li><a href="practice02/index.html">Practice02</a></li>
       </ul>
     </div>
   </body>
