add mousemove camera position

--- a/src/practice02/index.html
+++ b/src/practice02/index.html
@@ -4,13 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
+  <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=PT+Serif&family=Secular+One&display=swap');</style>
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./style.css">
   <script src="./script.js" type="module"></script>
   <title>WebGL School Practice02</title>
 </head>
 <body>
-  <div id="webgl" class="webgl"></div>
+  <header class="header">
+    <div class="header__item"><a href="">Menu</a></div>
+  </header>
+  <section class="fv">
+    <h1>Whereas disregard and contempt <br> for human rights have resulted</h1>
+    <div id="webgl" class="webgl"></div>
+  </section>
 </body>
 </html>
