add hand vector

--- a/src/practice02/index.html
+++ b/src/practice02/index.html
@@ -15,7 +15,10 @@
     <div class="header__item"><a href="">Menu</a></div>
   </header>
   <section class="fv">
-    <h1>Whereas disregard and contempt <br> for human rights have resulted</h1>
+    <div class="fv__title">
+      <h1>Whereas disregard and contempt <br> for human rights have resulted</h1>
+      <span>by Google Fonts</span>
+    </div>
     <div id="webgl" class="webgl"></div>
   </section>
 </body>
