add mouse stkr animation

--- a/src/practice02/index.html
+++ b/src/practice02/index.html
@@ -11,6 +11,7 @@
   <title>WebGL School Practice02</title>
 </head>
 <body>
+  <div class="stkr"></div>
   <header class="header">
     <div class="header__item"><a href="">Menu</a></div>
   </header>
