--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
         <li><a href="task01/index.html">Task01</a></li>
         <li><a href="task02/index.html">Task02</a></li>
         <li><a href="task03/index.html">Task03</a></li>
+        <li><a href="task04/index.html">Task04</a></li>
       </ul>
       <h2>Practice</h2>
       <ul>
