add: movie info

--- a/src/task04/index.html
+++ b/src/task04/index.html
@@ -9,8 +9,18 @@
   <title>Gallery Site</title>
 </head>
 <body>
-  <h1>Gallery Site</h1>
-  <div class="webgl"></div>
+  <header>
+    <h1>Gallery Site</h1>
+  </header>
+  <main>
+    <div class="main__wrapper">
+      <h2 class="title">GONE GIRL</h2>
+      <p class="desc">On their fifth wedding anniversary, writing teacher Nick Dunne returns home to find his wife Amy missing. Amy's fame as the inspiration for her parents' Amazing Amy children's books ensures widespread press coverage. The media find Nick's apathy towards the disappearance suspicious.</p>
+      <p class="director">directed by David Fincher</p>
+      <div class="wiki"><a href="https://en.wikipedia.org/wiki/Gone_Girl_(film)">Wiki</a></div>
+    </div>
+    <div class="webgl"></div>
+  </main>
   <script type="module" src="script.ts"></script>
 </body>
 </html>
