--- a/src/task04/index.html
+++ b/src/task04/index.html
@@ -19,6 +19,9 @@
       <p class="director">directed by David Fincher</p>
       <div class="wiki"><a href="https://en.wikipedia.org/wiki/Gone_Girl_(film)">Wiki</a></div>
     </div>
+    <div class="hero">
+      <h2>David Fincher</h2>
+    </div>
     <div class="webgl"></div>
   </main>
   <script type="module" src="script.ts"></script>
