--- a/src/task04/index.html
+++ b/src/task04/index.html
@@ -14,13 +14,13 @@
   </header>
   <main>
     <div class="main__wrapper">
-      <h2 class="title">GONE GIRL</h2>
-      <p class="desc">On their fifth wedding anniversary, writing teacher Nick Dunne returns home to find his wife Amy missing. Amy's fame as the inspiration for her parents' Amazing Amy children's books ensures widespread press coverage. The media find Nick's apathy towards the disappearance suspicious.</p>
-      <p class="director">directed by David Fincher</p>
-      <div class="wiki"><a href="https://en.wikipedia.org/wiki/Gone_Girl_(film)">Wiki</a></div>
+      <h2 class="main__title"></h2>
+      <p class="main__desc"></p>
+      <p class="main__director"></p>
+      <div class="main__wiki"><a href="">Wikipedia</a></div>
     </div>
     <div class="hero">
-      <h2>David Fincher</h2>
+      <h2 class="hero__title">David Fincher</h2>
     </div>
     <div class="webgl"></div>
   </main>
