--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,7 @@
       <ul>
         <li><a href="practice01/index.html">Practice01</a></li>
         <li><a href="practice02/index.html">Practice02</a></li>
+        <li><a href="practice03/index.html">Practice03</a></li>
       </ul>
     </div>
   </body>
