create Moonlight Whispers fv

--- a/src/practice03/index.html
+++ b/src/practice03/index.html
@@ -10,7 +10,11 @@
   <title>Gunya Gunya</title>
 </head>
 <body>
-  <h1>Gunya Gunya</h1>
+  <div class="container">
+    <h1>Moonlight Whispers</h1>
+    <p>An enchanting tale of lunar exploration, unveiling ancient mysteries and future possibilities, blending science and mystique.</p>
+    <button>Read More</button>
+  </div>
   <div class="webgl"></div>
   </main>
   <script type="module" src="./src/main.ts"></script>
