--- a/src/practice03/index.html
+++ b/src/practice03/index.html
@@ -7,7 +7,7 @@
   <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
   <link rel="stylesheet" href="./src/css/reset.css">
   <link rel="stylesheet" href="./src/css/style.css">
-  <title>Gunya Gunya</title>
+  <title>Moonlight Whispers</title>
 </head>
 <body>
   <div class="container">
