add: Pentagonページ作成

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
         <li><a href="task02/index.html">Task02</a></li>
         <li><a href="task03/index.html">Task03</a></li>
         <li><a href="task04/index.html">Task04</a></li>
+        <li><a href="task05/index.html">Task05</a></li>
       </ul>
       <h2>Practice</h2>
       <ul>
