--- a/src/task05/index.html
+++ b/src/task05/index.html
@@ -5,11 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Pentagon</title>
 </head>
 <body>
-  <div class="webgl"></div>
-  <script type="module" src="script.ts"></script>
+  <h1>Pentagon</h1>
+  <canvas id="webgl" class="webgl"></canvas>
+  <script type="module" src="./script/script.js"></script>
 </body>
 </html>
