--- a/src/task05/index.html
+++ b/src/task05/index.html
@@ -7,10 +7,10 @@
   <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Pentagon</title>
+  <title>Triangle</title>
 </head>
 <body>
-  <h1>Pentagon</h1>
+  <h1>Triangle</h1>
   <canvas id="webgl" class="webgl"></canvas>
   <script type="module" src="./script/script.js"></script>
 </body>
