--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebGL School Task</title>
+    <title>WebGL works</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap");
     </style>
@@ -40,7 +40,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1>WebGL School</h1>
+      <h1>WebGL works</h1>
       <h2>Task</h2>
       <ul>
         <li><a href="task01/index.html">Task01</a></li>
@@ -55,6 +55,7 @@
         <li><a href="practice02/index.html">Practice02</a></li>
         <li><a href="practice03/index.html">Practice03</a></li>
         <li><a href="practice04/index.html">Practice04</a></li>
+        <li><a href="practice05/index.html">Practice05</a></li>
       </ul>
     </div>
   </body>
