--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,7 @@
         <li><a href="practice03/index.html">Practice03</a></li>
         <li><a href="practice04/index.html">Practice04</a></li>
         <li><a href="practice05/index.html">Practice05</a></li>
+        <li><a href="practice06/index.html">Practice06</a></li>
       </ul>
     </div>
   </body>
