--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,7 @@
         <li><a href="practice04/index.html">Practice04</a></li>
         <li><a href="practice05/index.html">Practice05</a></li>
         <li><a href="practice06/index.html">Practice06</a></li>
+        <li><a href="practice07/index.html">Practice07</a></li>
       </ul>
     </div>
   </body>
