--- a/src/practice07/index.html
+++ b/src/practice07/index.html
@@ -7,10 +7,10 @@
   <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
   <link rel="stylesheet" href="./src/css/reset.css">
   <link rel="stylesheet" href="./src/css/style.css">
-  <title>Ripples effect</title>
+  <title>WebGL Gradation</title>
 </head>
 <body>
-  <h1>Ripples effect</h1>
+  <h1>WebGL Gradation</h1>
   <div class="webgl"></div>
   <script type="module" src="./src/main.ts"></script>
 </body>
