--- a/src/practice07/index.html
+++ b/src/practice07/index.html
@@ -7,11 +7,13 @@
   <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
   <link rel="stylesheet" href="./src/css/reset.css">
   <link rel="stylesheet" href="./src/css/style.css">
-  <title>WebGL Gradation</title>
+  <title>WebGL Noise</title>
 </head>
 <body>
-  <h1>WebGL Gradation</h1>
-  <div class="webgl"></div>
+  <h1>WebGL Noise</h1>
+  <div class="webgl">
+    <h2>NOISE</h2>
+  </div>
   <script type="module" src="./src/main.ts"></script>
 </body>
 </html>
