change folder name

--- a/src/index.html
+++ b/src/index.html
@@ -41,23 +41,20 @@
   <body>
     <div class="wrapper">
       <h1>WebGL works</h1>
-      <h2>Task</h2>
+      <h2>WebGL</h2>
       <ul>
-        <li><a href="task01/index.html">Task01</a></li>
-        <li><a href="task02/index.html">Task02</a></li>
-        <li><a href="task03/index.html">Task03</a></li>
-        <li><a href="task04/index.html">Task04</a></li>
-        <li><a href="task05/index.html">Task05</a></li>
-      </ul>
-      <h2>Practice</h2>
-      <ul>
-        <li><a href="practice01/index.html">Practice01</a></li>
-        <li><a href="practice02/index.html">Practice02</a></li>
-        <li><a href="practice03/index.html">Practice03</a></li>
-        <li><a href="practice04/index.html">Practice04</a></li>
-        <li><a href="practice05/index.html">Practice05</a></li>
-        <li><a href="practice06/index.html">Practice06</a></li>
-        <li><a href="practice07/index.html">Practice07</a></li>
+        <li><a href="works01/index.html">Works01</a></li>
+        <li><a href="works02/index.html">Works02</a></li>
+        <li><a href="works03/index.html">Works03</a></li>
+        <li><a href="works04/index.html">Works04</a></li>
+        <li><a href="works05/index.html">Works05</a></li>
+        <li><a href="works06/index.html">Works06</a></li>
+        <li><a href="works07/index.html">Works07</a></li>
+        <li><a href="works08/index.html">Works08</a></li>
+        <li><a href="works09/index.html">Works09</a></li>
+        <li><a href="works10/index.html">Works10</a></li>
+        <li><a href="works11/index.html">Works11</a></li>
+        <li><a href="works12/index.html">Works12</a></li>
       </ul>
     </div>
   </body>
