--- a/src/works15/index.html
+++ b/src/works15/index.html
@@ -7,11 +7,13 @@
   <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
   <link rel="stylesheet" href="./src/css/reset.css">
   <link rel="stylesheet" href="./src/css/style.css">
-  <title>Particle Animation</title>
+  <title>Hover Transition</title>
 </head>
 <body>
-  <h1>Particle Animation</h1>
-  <div class="webgl"></div>
+  <h1>Hover Transition</h1>
+    <div class="webgl__wrapper">
+      <div class="webgl"></div>
+    </div>
   </main>
   <script type="module" src="./src/main.ts"></script>
 </body>
