--- a/src/works15/index.html
+++ b/src/works15/index.html
@@ -13,6 +13,36 @@
   <h1>Hover Transition</h1>
     <div class="webgl__wrapper">
       <div class="webgl"></div>
+      <div class="effect__wrapper">
+        <label for="effect1">
+          effect1
+          <input id="effect1" type="radio" name="effect" value="effect1">
+        </label>
+        <label for="effect2">
+          effect2
+          <input id="effect2" type="radio" name="effect" value="effect2">
+        </label>
+        <label for="effect3">
+          effect3
+          <input id="effect3" type="radio" name="effect" value="effect3">
+        </label>
+        <label for="effect4">
+          effect4
+          <input id="effect4" type="radio" name="effect" value="effect4">
+        </label>
+        <label for="effect5">
+          effect5
+          <input id="effect5" type="radio" name="effect" value="effect5">
+        </label>
+        <label for="effect6">
+          effect6
+          <input id="effect6" type="radio" name="effect" value="effect6">
+        </label>
+        <label for="effect7">
+          effect7
+          <input id="effect7" type="radio" name="effect" value="effect7">
+        </label>
+      </div>
     </div>
   </main>
   <script type="module" src="./src/main.ts"></script>
