--- a/src/works15/index.html
+++ b/src/works15/index.html
@@ -16,7 +16,7 @@
       <div class="effect__wrapper">
         <label for="effect1">
           effect1
-          <input id="effect1" type="radio" name="effect" value="effect1">
+          <input id="effect1" type="radio" name="effect" value="effect1" checked>
         </label>
         <label for="effect2">
           effect2
