add: gsap animationの追加

--- a/src/works16/index.html
+++ b/src/works16/index.html
@@ -12,6 +12,9 @@
 <body>
   <h1>works16</h1>
   <div class="webgl"></div>
+  <div class="slider-button">
+    <span id="prev">Prev</span>/<span id="next">Next</span>
+  </div>
   </main>
   <script type="module" src="./src/main.ts"></script>
 </body>
