--- a/src/works16/index.html
+++ b/src/works16/index.html
@@ -13,7 +13,7 @@
   <h1>works16</h1>
   <div class="webgl"></div>
   <div class="slider-button">
-    <button id="prev">Prev</button>/<button id="next">Next</button>
+    <button id="prev">Prev</button>／<button id="next">Next</button>
   </div>
   </main>
   <script type="module" src="./src/main.ts"></script>
