--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,7 @@
         <li><a href="works14/index.html">Works14</a></li>
         <li><a href="works15/index.html">Works15</a></li>
         <li><a href="works16/index.html">Works16</a></li>
+        <li><a href="works17/index.html">Works17</a></li>
       </ul>
     </div>
   </body>
