--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,7 @@
         <li><a href="works15/index.html">Works15</a></li>
         <li><a href="works16/index.html">Works16</a></li>
         <li><a href="works17/index.html">Works17</a></li>
+        <li><a href="works18/index.html">Works18</a></li>
       </ul>
     </div>
   </body>
