画像の切り替え

--- a/src/works18/index.html
+++ b/src/works18/index.html
@@ -21,20 +21,30 @@
       <div class="inner">
         <div class="gallery-content">
           <ul class="gallery-list">
-            <li class="gallery-item"><img src="./src/image/texture.jpeg" alt=""></li>
-            <li class="gallery-item"><img src="./src/image/texture.jpeg" alt=""></li>
-            <li class="gallery-item"><img src="./src/image/texture.jpeg" alt=""></li>
-            <li class="gallery-item"><img src="./src/image/texture.jpeg" alt=""></li>
-            <li class="gallery-item"><img src="./src/image/texture.jpeg" alt=""></li>
+            <li class="gallery-item">
+              <img src="./src/image/texture1.jpg" alt="" />
+            </li>
+            <li class="gallery-item">
+              <img src="./src/image/texture2.jpg" alt="" />
+            </li>
+            <li class="gallery-item">
+              <img src="./src/image/texture3.jpg" alt="" />
+            </li>
+            <li class="gallery-item">
+              <img src="./src/image/texture4.jpg" alt="" />
+            </li>
+            <li class="gallery-item">
+              <img src="./src/image/texture5.jpg" alt="" />
+            </li>
           </ul>
         </div>
         <div class="work-content">
           <ul class="work-list">
-            <li class="work-item"><a href="#">work1</a></li>
-            <li class="work-item"><a href="#">work2</a></li>
-            <li class="work-item"><a href="#">work3</a></li>
-            <li class="work-item"><a href="#">work4</a></li>
-            <li class="work-item"><a href="#">work5</a></li>
+            <li id="1" class="work-item"><a href="#">work1</a></li>
+            <li id="2" class="work-item"><a href="#">work2</a></li>
+            <li id="3" class="work-item"><a href="#">work3</a></li>
+            <li id="4" class="work-item"><a href="#">work4</a></li>
+            <li id="5" class="work-item"><a href="#">work5</a></li>
           </ul>
         </div>
       </div>
