シェーダーの追加

--- a/src/works19/index.html
+++ b/src/works19/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./src/css/style.css" />
   <title>work19</title>
 </head>
-<body>
+<body id="root">
   <h1>works19</h1>
   <div class="webgl"></div>
   <div class="container">
