--- a/src/works18/index.html
+++ b/src/works18/index.html
@@ -28,11 +28,21 @@
         </div>
         <div class="work-content">
           <ul class="work-list">
-            <li id="1" class="work-item"><a href="#">work1</a></li>
-            <li id="2" class="work-item"><a href="#">work2</a></li>
-            <li id="3" class="work-item"><a href="#">work3</a></li>
-            <li id="4" class="work-item"><a href="#">work4</a></li>
-            <li id="5" class="work-item"><a href="#">work5</a></li>
+            <li id="1" class="work-item">
+              <a href="#"> <span>Spectators</span> </a>
+            </li>
+            <li id="2" class="work-item">
+              <a href="#"> <span>Subway</span> </a>
+            </li>
+            <li id="3" class="work-item">
+              <a href="#"> <span>Wilderness</span> </a>
+            </li>
+            <li id="4" class="work-item">
+              <a href="#"> <span>Building</span> </a>
+            </li>
+            <li id="5" class="work-item">
+              <a href="#"> <span>Utopia</span> </a>
+            </li>
           </ul>
         </div>
       </div>
