sliderアニメーションの追加

--- a/src/works21/index.html
+++ b/src/works21/index.html
@@ -14,8 +14,9 @@
     <h1>works21</h1>
     <div>
       <div class="webgl"></div>
-      <div class="img-wrapper">
-        <img src="./src/img/texture.jpg" alt="rhinoceros">
+      <div class="slider-button">
+        <div class="prev">Prev</div>
+        <div class="next">Next</div>
       </div>
     </div>
     <script type="module" src="./src/ts/main.ts"></script>
