change work20 work21

--- a/src/works21/index.html
+++ b/src/works21/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap");
-    </style>
-    <link rel="stylesheet" href="./src/css/reset.css" />
-    <link rel="stylesheet" href="./src/css/style.css" />
-    <title>works21</title>
-  </head>
-  <body>
-    <h1>works21</h1>
-    <div>
-      <div class="webgl"></div>
-      <div class="slider-button">
-        <div class="prev">Prev</div>
-        <div class="next">Next</div>
-      </div>
-    </div>
-    <script type="module" src="./src/ts/main.ts"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap");
+  </style>
+  <link rel="stylesheet" href="./src/css/reset.css" />
+  <link rel="stylesheet" href="./src/css/style.css" />
+  <title>works21</title>
+</head>
+<body>
+  <h1>works21</h1>
+  <div class="webgl"></div>
+  <script type="module" src="./src/ts/main.ts"></script>
+</body>
 </html>
