--- a/src/works21/index.html
+++ b/src/works21/index.html
@@ -13,6 +13,95 @@
 <body>
   <h1>works21</h1>
   <div class="webgl"></div>
+  <main>
+    <section class="wrapper">
+      <div class="title">
+        <h2>Movie List</h2>
+      </div>
+      <ul class="list">
+        <li class="item">
+          <div class="item-text">
+            <p>ギャラリー</p>
+            <span>テキスト</span>
+          </div>
+          <img src="./src/img/texture1.jpg" alt="ギャラリー">
+        </li>
+        <li class="item">
+          <div class="item-text">
+            <p>ギャラリー</p>
+            <span>テキスト</span>
+          </div>
+          <img src="./src/img/texture2.jpg" alt="ギャラリー">
+        </li>
+        <li class="item">
+          <div class="item-text">
+            <p>ギャラリー</p>
+            <span>テキスト</span>
+          </div>
+          <img src="./src/img/texture3.jpg" alt="ギャラリー">
+        </li>
+        <li class="item">
+          <div class="item-text">
+            <p>ギャラリー</p>
+            <span>テキスト</span>
+          </div>
+          <img src="./src/img/texture4.jpg" alt="ギャラリー">
+        </li>
+        <li class="item">
+          <div class="item-text">
+            <p>ギャラリー</p>
+            <span>テキスト</span>
+          </div>
+          <img src="./src/img/texture4.jpg" alt="ギャラリー">
+        </li>
+        <li class="item">
+          <div class="item-text">
+            <p>ギャラリー</p>
+            <span>テキスト</span>
+          </div>
+          <img src="./src/img/texture4.jpg" alt="ギャラリー">
+        </li>
+        <li class="item">
+          <div class="item-text">
+            <p>ギャラリー</p>
+            <span>テキスト</span>
+          </div>
+          <img src="./src/img/texture4.jpg" alt="ギャラリー">
+        </li>
+        <li class="item">
+          <div class="item-text">
+            <p>ギャラリー</p>
+            <span>テキスト</span>
+          </div>
+          <img src="./src/img/texture4.jpg" alt="ギャラリー">
+        </li>
+        <li class="item">
+          <div class="item-text">
+            <p>ギャラリー</p>
+            <span>テキスト</span>
+          </div>
+          <img src="./src/img/texture4.jpg" alt="ギャラリー">
+        </li>
+        <li class="item">
+          <div class="item-text">
+            <p>ギャラリー</p>
+            <span>テキスト</span>
+          </div>
+          <img src="./src/img/texture4.jpg" alt="ギャラリー">
+        </li>
+        <li class="item">
+          <div class="item-text">
+            <p>ギャラリー</p>
+            <span>テキスト</span>
+          </div>
+          <img src="./src/img/texture4.jpg" alt="ギャラリー">
+        </li>
+      </ul>
+      <div class="pagination">
+
+      </div>
+    </section>
+  </main>
   <script type="module" src="./src/ts/main.ts"></script>
 </body>
 </html>
