マウスのイベントを取得

--- a/src/works21/index.html
+++ b/src/works21/index.html
@@ -19,82 +19,82 @@
         <h2>Movie List</h2>
       </div>
       <ul class="list">
-        <li class="item">
+        <li class="item" data-list-no="1">
           <div class="item-text">
             <p>ギャラリー</p>
             <span>テキスト</span>
           </div>
           <img src="./src/img/texture1.jpg" alt="ギャラリー">
         </li>
-        <li class="item">
+        <li class="item" data-list-no="2">
           <div class="item-text">
             <p>ギャラリー</p>
             <span>テキスト</span>
           </div>
           <img src="./src/img/texture2.jpg" alt="ギャラリー">
         </li>
-        <li class="item">
+        <li class="item" data-list-no="3">
           <div class="item-text">
             <p>ギャラリー</p>
             <span>テキスト</span>
           </div>
           <img src="./src/img/texture3.jpg" alt="ギャラリー">
         </li>
-        <li class="item">
+        <li class="item" data-list-no="4">
           <div class="item-text">
             <p>ギャラリー</p>
             <span>テキスト</span>
           </div>
           <img src="./src/img/texture4.jpg" alt="ギャラリー">
         </li>
-        <li class="item">
+        <li class="item" data-list-no="5">
           <div class="item-text">
             <p>ギャラリー</p>
             <span>テキスト</span>
           </div>
-          <img src="./src/img/texture4.jpg" alt="ギャラリー">
+          <img src="./src/img/texture2.jpg" alt="ギャラリー">
         </li>
-        <li class="item">
+        <li class="item" data-list-no="6">
           <div class="item-text">
             <p>ギャラリー</p>
             <span>テキスト</span>
           </div>
-          <img src="./src/img/texture4.jpg" alt="ギャラリー">
+          <img src="./src/img/texture1.jpg" alt="ギャラリー">
         </li>
-        <li class="item">
+        <li class="item" data-list-no="7">
           <div class="item-text">
             <p>ギャラリー</p>
             <span>テキスト</span>
           </div>
-          <img src="./src/img/texture4.jpg" alt="ギャラリー">
+          <img src="./src/img/texture2.jpg" alt="ギャラリー">
         </li>
-        <li class="item">
+        <li class="item" data-list-no="8">
           <div class="item-text">
             <p>ギャラリー</p>
             <span>テキスト</span>
           </div>
-          <img src="./src/img/texture4.jpg" alt="ギャラリー">
+          <img src="./src/img/texture3.jpg" alt="ギャラリー">
         </li>
-        <li class="item">
+        <li class="item" data-list-no="9">
           <div class="item-text">
             <p>ギャラリー</p>
             <span>テキスト</span>
           </div>
-          <img src="./src/img/texture4.jpg" alt="ギャラリー">
+          <img src="./src/img/texture1.jpg" alt="ギャラリー">
         </li>
-        <li class="item">
+        <li class="item" data-list-no="10">
           <div class="item-text">
             <p>ギャラリー</p>
             <span>テキスト</span>
           </div>
-          <img src="./src/img/texture4.jpg" alt="ギャラリー">
+          <img src="./src/img/texture2.jpg" alt="ギャラリー">
         </li>
-        <li class="item">
+        <li class="item" data-list-no="11">
           <div class="item-text">
             <p>ギャラリー</p>
             <span>テキスト</span>
           </div>
-          <img src="./src/img/texture4.jpg" alt="ギャラリー">
+          <img src="./src/img/texture1.jpg" alt="ギャラリー">
         </li>
       </ul>
       <div class="pagination">
