--- a/src/works21/index.html
+++ b/src/works21/index.html
@@ -16,85 +16,43 @@
   <main>
     <section class="wrapper">
       <div class="title">
-        <h2>Movie List</h2>
+        <h2>Fictional Movie!!</h2>
       </div>
       <ul class="list">
         <li class="item" data-list-no="1">
           <div class="item-text">
-            <p>ギャラリー</p>
-            <span>テキスト</span>
+            <p>Eternal Reverie</p>
+            <span>Amelia Rivers</span>
           </div>
           <img src="./src/img/texture1.jpg" alt="ギャラリー">
         </li>
         <li class="item" data-list-no="2">
           <div class="item-text">
-            <p>ギャラリー</p>
-            <span>テキスト</span>
+            <p>Shadow's Embrace</p>
+            <span>Gabriel Steele</span>
           </div>
           <img src="./src/img/texture2.jpg" alt="ギャラリー">
         </li>
         <li class="item" data-list-no="3">
           <div class="item-text">
-            <p>ギャラリー</p>
-            <span>テキスト</span>
+            <p>Whispers in the Wind</p>
+            <span>Isabella Moon</span>
           </div>
           <img src="./src/img/texture3.jpg" alt="ギャラリー">
         </li>
         <li class="item" data-list-no="4">
           <div class="item-text">
-            <p>ギャラリー</p>
-            <span>テキスト</span>
+            <p>Echoes of Eternity</p>
+            <span>Sebastian Grey</span>
           </div>
           <img src="./src/img/texture4.jpg" alt="ギャラリー">
         </li>
         <li class="item" data-list-no="5">
           <div class="item-text">
-            <p>ギャラリー</p>
-            <span>テキスト</span>
+            <p>Silent Serenade</p>
+            <span>Evelyn Cross</span>
           </div>
           <img src="./src/img/texture2.jpg" alt="ギャラリー">
-        </li>
-        <li class="item" data-list-no="6">
-          <div class="item-text">
-            <p>ギャラリー</p>
-            <span>テキスト</span>
-          </div>
-          <img src="./src/img/texture1.jpg" alt="ギャラリー">
-        </li>
-        <li class="item" data-list-no="7">
-          <div class="item-text">
-            <p>ギャラリー</p>
-            <span>テキスト</span>
-          </div>
-          <img src="./src/img/texture2.jpg" alt="ギャラリー">
-        </li>
-        <li class="item" data-list-no="8">
-          <div class="item-text">
-            <p>ギャラリー</p>
-            <span>テキスト</span>
-          </div>
-          <img src="./src/img/texture3.jpg" alt="ギャラリー">
-        </li>
-        <li class="item" data-list-no="9">
-          <div class="item-text">
-            <p>ギャラリー</p>
-            <span>テキスト</span>
-          </div>
-          <img src="./src/img/texture1.jpg" alt="ギャラリー">
-        </li>
-        <li class="item" data-list-no="10">
-          <div class="item-text">
-            <p>ギャラリー</p>
-            <span>テキスト</span>
-          </div>
-          <img src="./src/img/texture2.jpg" alt="ギャラリー">
-        </li>
-        <li class="item" data-list-no="11">
-          <div class="item-text">
-            <p>ギャラリー</p>
-            <span>テキスト</span>
-          </div>
-          <img src="./src/img/texture1.jpg" alt="ギャラリー">
         </li>
       </ul>
       <div class="pagination">
