--- a/src/works21/index.html
+++ b/src/works21/index.html
@@ -1,65 +1,73 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap");
-  </style>
-  <link rel="stylesheet" href="./src/css/reset.css" />
-  <link rel="stylesheet" href="./src/css/style.css" />
-  <title>works21</title>
-</head>
-<body>
-  <h1>works21</h1>
-  <div class="webgl"></div>
-  <main>
-    <section class="wrapper">
-      <div class="title">
-        <h2>Fictional Movie!!</h2>
-      </div>
-      <ul class="list">
-        <li class="item" data-list-no="1">
-          <div class="item-text">
-            <p>Eternal Reverie</p>
-            <span>Amelia Rivers</span>
-          </div>
-          <img src="./src/img/texture1.jpg" alt="ギャラリー">
-        </li>
-        <li class="item" data-list-no="2">
-          <div class="item-text">
-            <p>Shadow's Embrace</p>
-            <span>Gabriel Steele</span>
-          </div>
-          <img src="./src/img/texture2.jpg" alt="ギャラリー">
-        </li>
-        <li class="item" data-list-no="3">
-          <div class="item-text">
-            <p>Whispers in the Wind</p>
-            <span>Isabella Moon</span>
-          </div>
-          <img src="./src/img/texture3.jpg" alt="ギャラリー">
-        </li>
-        <li class="item" data-list-no="4">
-          <div class="item-text">
-            <p>Echoes of Eternity</p>
-            <span>Sebastian Grey</span>
-          </div>
-          <img src="./src/img/texture4.jpg" alt="ギャラリー">
-        </li>
-        <li class="item" data-list-no="5">
-          <div class="item-text">
-            <p>Silent Serenade</p>
-            <span>Evelyn Cross</span>
-          </div>
-          <img src="./src/img/texture2.jpg" alt="ギャラリー">
-        </li>
-      </ul>
-      <div class="pagination">
-
-      </div>
-    </section>
-  </main>
-  <script type="module" src="./src/ts/main.ts"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap");
+    </style>
+    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
+    <title>works21</title>
+  </head>
+  <body>
+    <h1>works21</h1>
+    <div class="webgl"></div>
+    <main>
+      <section class="wrapper">
+        <div class="title">
+          <h2>Fake Movie!!</h2>
+        </div>
+        <ul class="list">
+          <li class="item" data-list-no="1">
+            <div class="item-text">
+              <p>Eternal Reverie</p>
+              <span>Amelia Rivers</span>
+            </div>
+            <video loop crossorigin="anonymous" playsinline muted>
+              <source src="./src/movie/Eternal_Reverie.mp4" type="video/mp4;"/>
+            </video>
+          </li>
+          <li class="item" data-list-no="2">
+            <div class="item-text">
+              <p>Shadow's Embrace</p>
+              <span>Gabriel Steele</span>
+            </div>
+            <video loop crossorigin="anonymous" playsinline muted>
+              <source src="./src/movie/Shadows_Embrace.mp4" type="video/mp4;"/>
+            </video>
+          </li>
+          <li class="item" data-list-no="3">
+            <div class="item-text">
+              <p>Whispers in the Wind</p>
+              <span>Isabella Moon</span>
+            </div>
+            <video loop crossorigin="anonymous" playsinline muted>
+              <source src="./src/movie/Whispers_in_the_Wind.mp4" type="video/mp4;"/>
+            </video>
+          </li>
+          <li class="item" data-list-no="4">
+            <div class="item-text">
+              <p>Echoes of Eternity</p>
+              <span>Sebastian Grey</span>
+            </div>
+            <video loop crossorigin="anonymous" playsinline muted>
+              <source src="./src/movie/Echoes_of_Eternity.mp4" type="video/mp4;"/>
+            </video>
+          </li>
+          <li class="item" data-list-no="5">
+            <div class="item-text">
+              <p>Silent Serenade</p>
+              <span>Evelyn Cross</span>
+            </div>
+            <video loop crossorigin="anonymous" playsinline muted>
+              <source src="./src/movie/Silent_Serenade.mp4" type="video/mp4;"/>
+            </video>
+          </li>
+        </ul>
+        <div class="pagination"></div>
+      </section>
+    </main>
+    <script type="module" src="./src/ts/main.ts"></script>
+  </body>
 </html>
