ページのカラーを変更

--- a/src/works21/index.html
+++ b/src/works21/index.html
@@ -16,25 +16,19 @@
     <main>
       <section class="wrapper">
         <div class="title">
-          <h2>Fake Movie!!</h2>
+          <h2>Fake Movie!!!!!!!!!!</h2>
         </div>
         <ul class="list">
-          <li class="item" data-list-no="1">
+          <li class="item" data-list-no="4">
             <div class="item-text">
-              <p>Eternal Reverie</p>
-              <span>Amelia Rivers</span>
+              <p>Echoes of Eternity</p>
+              <span>Sebastian Grey</span>
             </div>
             <video loop crossorigin="anonymous" playsinline muted>
-              <source src="./src/movie/Eternal_Reverie.mp4" type="video/mp4;"/>
-            </video>
-          </li>
-          <li class="item" data-list-no="2">
-            <div class="item-text">
-              <p>Shadow's Embrace</p>
-              <span>Gabriel Steele</span>
-            </div>
-            <video loop crossorigin="anonymous" playsinline muted>
-              <source src="./src/movie/Shadows_Embrace.mp4" type="video/mp4;"/>
+              <source
+                src="./src/movie/Echoes_of_Eternity.mp4"
+                type="video/mp4;"
+              />
             </video>
           </li>
           <li class="item" data-list-no="3">
@@ -43,16 +37,19 @@
               <span>Isabella Moon</span>
             </div>
             <video loop crossorigin="anonymous" playsinline muted>
-              <source src="./src/movie/Whispers_in_the_Wind.mp4" type="video/mp4;"/>
+              <source
+                src="./src/movie/Whispers_in_the_Wind.mp4"
+                type="video/mp4;"
+              />
             </video>
           </li>
-          <li class="item" data-list-no="4">
+          <li class="item" data-list-no="2">
             <div class="item-text">
-              <p>Echoes of Eternity</p>
-              <span>Sebastian Grey</span>
+              <p>Shadow's Embrace</p>
+              <span>Gabriel Steele</span>
             </div>
             <video loop crossorigin="anonymous" playsinline muted>
-              <source src="./src/movie/Echoes_of_Eternity.mp4" type="video/mp4;"/>
+              <source src="./src/movie/Shadows_Embrace.mp4" type="video/mp4;" />
             </video>
           </li>
           <li class="item" data-list-no="5">
@@ -61,7 +58,16 @@
               <span>Evelyn Cross</span>
             </div>
             <video loop crossorigin="anonymous" playsinline muted>
-              <source src="./src/movie/Silent_Serenade.mp4" type="video/mp4;"/>
+              <source src="./src/movie/Silent_Serenade.mp4" type="video/mp4;" />
+            </video>
+          </li>
+          <li class="item" data-list-no="1">
+            <div class="item-text">
+              <p>Eternal Reverie</p>
+              <span>Amelia Rivers</span>
+            </div>
+            <video loop crossorigin="anonymous" playsinline muted>
+              <source src="./src/movie/Eternal_Reverie.mp4" type="video/mp4;" />
             </video>
           </li>
         </ul>
