modalの内容を動的に変更する

--- a/src/works21/index.html
+++ b/src/works21/index.html
@@ -19,7 +19,7 @@
           <h2>Fake Movie!!!!!!!!!!</h2>
         </div>
         <ul class="list">
-          <li class="item" data-list-no="4">
+          <li class="item" data-list-no="1">
             <div class="item-text movie-title">
               <p>Echoes of Eternity</p>
               <span>Sebastian Grey</span>
@@ -31,7 +31,7 @@
               />
             </video>
           </li>
-          <li class="item" data-list-no="3">
+          <li class="item" data-list-no="2">
             <div class="item-text movie-title">
               <p>Whispers in the Wind</p>
               <span>Isabella Moon</span>
@@ -43,7 +43,7 @@
               />
             </video>
           </li>
-          <li class="item" data-list-no="2">
+          <li class="item" data-list-no="3">
             <div class="item-text movie-title">
               <p>Shadow's Embrace</p>
               <span>Gabriel Steele</span>
@@ -52,7 +52,7 @@
               <source src="./src/movie/Shadows_Embrace.mp4" type="video/mp4;" />
             </video>
           </li>
-          <li class="item" data-list-no="5">
+          <li class="item" data-list-no="4">
             <div class="item-text movie-title">
               <p>Silent Serenade</p>
               <span>Evelyn Cross</span>
@@ -61,7 +61,7 @@
               <source src="./src/movie/Silent_Serenade.mp4" type="video/mp4;" />
             </video>
           </li>
-          <li class="item" data-list-no="1">
+          <li class="item" data-list-no="5">
             <div class="item-text movie-title">
               <p>Eternal Reverie</p>
               <span>Amelia Rivers</span>
@@ -77,11 +77,11 @@
           <div class="modal-image"></div>
           <div class="modal-text">
             <div class="modal-title movie-title">
-              <p>Echoes of Eternity</p>
-              <span>Sebastian Grey</span>
+              <p></p>
+              <span></span>
             </div>
             <div class="modal-desc">
-              <p>In the ancient city of Aeternum, where time flows like a river and echoes of the past linger in every shadow, "Echoes of Eternity" tells the story of two star-crossed lovers, Amelia and Marcus. Born into rival noble families, their forbidden love threatens to ignite a war that could consume the entire realm. As they fight to defy the expectations of their families and the dictates of fate, Amelia and Marcus uncover a dark conspiracy that spans centuries, reaching back to the very origins of their city. Guided by the mysterious whispers of the ancient stones and the echoes of their ancestors, they embark on a perilous quest to uncover the truth and break the cycle of violence that has plagued their land for generations. "Echoes of Eternity" is an epic tale of love, betrayal, and redemption set against the backdrop of a world where the past and present collide in a timeless dance of destiny. In the ancient city of Aeternum, where time flows like a river and echoes of the past linger in every shadow, "Echoes of Eternity" tells the story of two star-crossed lovers, Amelia and Marcus. Born into rival noble families, their forbidden love threatens to ignite a war that could consume the entire realm. As they fight to defy the expectations of their families and the dictates of fate, Amelia and Marcus uncover a dark conspiracy that spans centuries, reaching back to the very origins of their city. Guided by the mysterious whispers of the ancient stones and the echoes of their ancestors, they embark on a perilous quest to uncover the truth and break the cycle of violence that has plagued their land for generations. "Echoes of Eternity" is an epic tale of love, betrayal, and redemption set against the backdrop of a world where the past and present collide in a timeless dance of destiny.</p>
+              <p></p>
             </div>
           </div>
           <div class="modal-button">
