--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,7 @@
         <li><a href="works19/index.html">works19</a></li>
         <li><a href="works20/index.html">works20</a></li>
         <li><a href="works21/index.html">works21</a></li>
+        <li><a href="works22/index.html">works22</a></li>
       </ul>
     </div>
   </body>
