add: simple cube

--- a/src/works22/index.html
+++ b/src/works22/index.html
@@ -13,5 +13,6 @@
   <body>
     <h1>works22</h1>
     <div class="webgl"></div>
+    <script type="module" src="./src/ts/main.ts"></script>
   </body>
 </html>
