--- a/src/works22/index.html
+++ b/src/works22/index.html
@@ -12,7 +12,13 @@
   </head>
   <body>
     <h1>works22</h1>
-    <div class="webgl"></div>
+    <div>
+      <div class="webgl"></div>
+      <div class="slider-button">
+        <div class="prev">Prev</div>
+        <div class="next">Next</div>
+      </div>
+    </div>
     <script type="module" src="./src/ts/main.ts"></script>
   </body>
 </html>
