add: open modal

--- a/src/works23/index.html
+++ b/src/works23/index.html
@@ -21,42 +21,90 @@
         </div>
         <ul class="list">
           <li class="item">
-            <a href="#"><div class="item-image"><img src="./src/img/accessory1.jpg" alt="#" /></div></a>
+            <a
+              ><div class="item-image">
+                <img src="./src/img/accessory1.jpg" alt="#" /></div
+            ></a>
           </li>
           <li class="item">
-            <a href="#"><div class="item-image"><img src="./src/img/accessory2.jpg" alt="#" /></div></a>
+            <a
+              ><div class="item-image">
+                <img src="./src/img/accessory2.jpg" alt="#" /></div
+            ></a>
           </li>
           <li class="item">
-            <a href="#"><div class="item-image"><img src="./src/img/accessory3.jpg" alt="#" /></div></a>
+            <a
+              ><div class="item-image">
+                <img src="./src/img/accessory3.jpg" alt="#" /></div
+            ></a>
           </li>
           <li class="item">
-            <a href="#"><div class="item-image"><img src="./src/img/accessory4.jpg" alt="#" /></div></a>
+            <a
+              ><div class="item-image">
+                <img src="./src/img/accessory4.jpg" alt="#" /></div
+            ></a>
           </li>
           <li class="item">
-            <a href="#"><div class="item-image"><img src="./src/img/accessory5.jpg" alt="#" /></div></a>
+            <a
+              ><div class="item-image">
+                <img src="./src/img/accessory5.jpg" alt="#" /></div
+            ></a>
           </li>
           <li class="item">
-            <a href="#"><div class="item-image"><img src="./src/img/accessory6.jpg" alt="#" /></div></a>
+            <a
+              ><div class="item-image">
+                <img src="./src/img/accessory6.jpg" alt="#" /></div
+            ></a>
           </li>
           <li class="item">
-            <a href="#"><div class="item-image"><img src="./src/img/accessory1.jpg" alt="#" /></div></a>
+            <a
+              ><div class="item-image">
+                <img src="./src/img/accessory1.jpg" alt="#" /></div
+            ></a>
           </li>
           <li class="item">
-            <a href="#"><div class="item-image"><img src="./src/img/accessory2.jpg" alt="#" /></div></a>
+            <a
+              ><div class="item-image">
+                <img src="./src/img/accessory2.jpg" alt="#" /></div
+            ></a>
           </li>
           <li class="item">
-            <a href="#"><div class="item-image"><img src="./src/img/accessory3.jpg" alt="#" /></div></a>
+            <a
+              ><div class="item-image">
+                <img src="./src/img/accessory3.jpg" alt="#" /></div
+            ></a>
           </li>
           <li class="item">
-            <a href="#"><div class="item-image"><img src="./src/img/accessory4.jpg" alt="#" /></div></a>
+            <a
+              ><div class="item-image">
+                <img src="./src/img/accessory4.jpg" alt="#" /></div
+            ></a>
           </li>
           <li class="item">
-            <a href="#"><div class="item-image"><img src="./src/img/accessory5.jpg" alt="#" /></div></a>
+            <a
+              ><div class="item-image">
+                <img src="./src/img/accessory5.jpg" alt="#" /></div
+            ></a>
           </li>
           <li class="item">
-            <a href="#"><div class="item-image"><img src="./src/img/accessory6.jpg" alt="#" /></div></a>
+            <a
+              ><div class="item-image">
+                <img src="./src/img/accessory6.jpg" alt="#" /></div
+            ></a>
           </li>
         </ul>
+      </div>
+      <div class="modal">
+        <div class="modal-image"></div>
+        <div class="modal-desc">
+          <h3>TitleTitleTitleTitle</h3>
+          <p>
+            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+          </p>
+          <div class="modal-close">
+            <p class="close">Close</p>
+          </div>
+        </div>
       </div>
     </main>
     <script type="module" src="./src/ts/main.ts"></script>
