add: init works24

--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,7 @@
         <li><a href="works21/index.html">works21</a></li>
         <li><a href="works22/index.html">works22</a></li>
         <li><a href="works23/index.html">works23</a></li>
+        <li><a href="works24/index.html">works24</a></li>
       </ul>
     </div>
   </body>
