--- a/src/works24/index.html
+++ b/src/works24/index.html
@@ -8,12 +8,74 @@
     </style>
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
-    <title>works23</title>
+    <title>works24</title>
   </head>
   <body>
     <h1>works24</h1>
     <main>
       <div class="webgl"></div>
+      <ul class="list">
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+        <li class="item">
+          <div class="item__img"><img src="" alt=""></div>
+        </li>
+      </ul>
     </main>
     <script type="module" src="./src/ts/main.ts"></script>
   </body>
