--- a/src/works24/index.html
+++ b/src/works24/index.html
@@ -78,5 +78,6 @@
       </ul>
     </main>
     <script type="module" src="./src/ts/main.ts"></script>
+    <script type="module" src="./src/ts/scroll.ts"></script>
   </body>
 </html>
