--- a/src/works24/index.html
+++ b/src/works24/index.html
@@ -15,65 +15,65 @@
     <main>
       <div class="webgl"></div>
       <ul class="list">
-        <li class="item" style="background: #333">
-          <div class="item__img"><img src="" alt="" /></div>
+        <li class="item">
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: rgb(207, 106, 6)">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: #cd1616">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: #25cb00">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: #db07c3">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: #0800fe">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: rgb(85, 164, 242)">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: rgb(195, 221, 21)">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: #333">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: rgb(207, 106, 6)">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: #cd1616">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: #25cb00">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: #db07c3">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: #0800fe">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: rgb(85, 164, 242)">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: rgb(195, 221, 21)">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: #db07c3">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: #0800fe">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: rgb(85, 164, 242)">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
         <li class="item" style="background: rgb(195, 221, 21)">
-          <div class="item__img"><img src="" alt="" /></div>
+          <div class="item__img"></div>
         </li>
       </ul>
     </main>
